hood helped me fix a spacing issue in 1.4.
as part of this, the document-wide page geometry got substantially
modified

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -9,7 +9,14 @@ Remarkably, these unstable contexts also admit algebro-geometric interpretations
 \begin{itemize}
 \item (\Cref{UnstableContextsSection}:) For $F = E = H\F_2$, we compute the full unstable dual Steenrod algebra $H\F_2{}_* \OS{H\F_2}{*}$ by means of iterated bar spectral sequences.  We then pass to the additive unstable cooperations, where we show by hand that this presents the homomorphism scheme $\InternalHom{FormalGroups}(\G_a, \G_a)$.  Finally, we pass to the stable additive cooperations, and we check that our results here are compatible with the isomorphism \[\Spec H\F_2{}_* H\F_2 \cong \InternalAut{\G_a}\] presented in \Cref{SteenrodAlgIdentifiedWithAutGa}.
 \item (\Cref{COableCoopnsII}:) We next consider the case where $E = MU$ and where $F$ is any complex-orientable theory.  We begin with the case $F = H\F_p$, where we can again approach the problem using iterated bar spectral sequences.  The resulting computation is sufficiently nice that we can use this special case of $F = H\F_p$ to deduce the further case of $F = H\Z_{(p)}$, then $F = H\Z$, then $F = MU$, and then finally $F$ any complex-orientable theory.
-\item (\Cref{LEFTCooperations}:) Having been able to vary $F$ as widely as possible in the previous case, we then turn to trying to vary $E$.  This is considerably harder, since the infinite loopspaces $\OS{E}{*}$ associated to $E$ are extremely complicated and vary wildly under even ``small'' changes in $E$.  However, in the special case of $F = H\F_p$, we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{GradedHopfAlgebras}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] which postcomposes with \[\CatOf{Spectra} \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \xrightarrow{H\F_p{}_*} \CatOf{GradedHopfAlgebras}^{>0, \fin}_{\F_p/} \xrightarrow{D_*} \CatOf{GradedDMods} \subseteq \CatOf{GradedModules}_{\Cart}\] to give a homological functor.  This means that the Dieudonn\'e module associated to an infinite loopspace varies stably with the spectrum underlying the loopspace, which is enough leverage to the settle the case where $E$ is any Landweber--flat theory.
+\item (\Cref{LEFTCooperations}:) Having been able to vary $F$ as widely as possible in the previous case, we then turn to trying to vary $E$.  This is considerably harder, since the infinite loopspaces $\OS{E}{*}$ associated to $E$ are extremely complicated and vary wildly under even ``small'' changes in $E$.  However, in the special case of $F = H\F_p$, we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{GradedHopfAlgebras}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] which postcomposes with
+\begin{align*}
+\CatOf{Spectra} & \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \\
+& \xrightarrow{H\F_p{}_*} \CatOf{GradedHopfAlgebras}^{>0, \fin}_{\F_p/} \\
+& \xrightarrow{D_*} \CatOf{GradedDMods} \\
+& \subseteq \CatOf{GradedModules}_{\Cart}
+\end{align*}
+to give a homological functor.  This means that the Dieudonn\'e module associated to an infinite loopspace varies stably with the spectrum underlying the loopspace, which is enough leverage to the settle the case where $E$ is any Landweber--flat theory.
 \item (\Cref{CoopnsForMoravaKandHA}:) Finally, we settle one further case not covered by any of our generic hypotheses above: $F = K_\Gamma$ and $E = H\Z/p^j$.  Neither $K_\Gamma$ nor $H\Z/p^j$ is Landweber--flat, but because $K_\Gamma$ is a field spectrum and because the additive group law associated to $H\Z/p^j$ is so simple, we can still perform the requisite iterated bar spectral sequence calculation by hand.
 \end{itemize}
 
@@ -638,7 +645,7 @@ The \textit{cohomologically translation invariant differentials} is the $A$--sub
 Consider the case that $A$ is torsion-free (or ``$\Z$--flat'', if you like), and set $K = A \otimes \Q$ so that $A \to K$ is an injection.  In this case the differentiation map $x A\ps{x} \to A\ps{x}$ is an injection and integration of power series is possible in $K$, so we can re-express first the definition of $H^1_{dR}$ and second the conditions on our algebraic differentials in the following diagram of exact rows:
 \begin{center}
 \begin{tikzcd}[column sep=0.5em]
-0 \arrow{r} & \left\{\begin{array}{c}\text{integrals with} \\ \text{$A$ coefficients}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all conceivable integrals} \\ \text{of differentials defined over $A$}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[equal]{d} & 0 \\
+0 \arrow{r} & \left\{\begin{array}{c}\text{integrals} \\ \text{with $A$} \\ \text{coefficients}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all conceivable integrals} \\ \text{of differentials} \\ \text{defined over $A$}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{missing} \\ \text{integrals}\end{array}\right\} \arrow{r} \arrow[equal]{d} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} & \{f \in x K\ps{x} \mid df \in A\ps{x}dx\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}df \in A\ps{x}dx, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & PH^1_{dR}(\G/A) \arrow{r} \arrow{u} & 0,
 \end{tikzcd}
@@ -722,7 +729,7 @@ Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, a
 \begin{itemize}
 \item \textit{The group scheme $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$ but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on $D^*(\mu_2)$ but wholly trivially on $D^*(\alpha_2)$.  \todo{Example 8.5 in FPFP is strongly related to this.}
 \item \textit{There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.}  Suppose that $G$ were such a group scheme, so that $D^*(G) / 2$ would give $D^*(\alpha_2)$.  It can't be the case that $D^*(G)$ has only $2$--torsion, since then this quotient would be a null operation, so it must be the case that $D^*(G) = \Z/4\{x\}$.  The action of both $F$ and $V$ on $x$ must vanish after quotienting by $2$, so it must be the case that $Fx = 2cx$ and $Vx = 2dx$ for some constants $c$ and $d$---but this violates $FVx = 2x$.
-\item \textit{If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  This follows from calculating the action of $F$ and $V$ to get a short exact sequence of Dieudonn\'e modules: \[0 \to \left.\F_2\{Fx\}\middle / \left(\begin{array}{c} F = 0, \\ V = 0 \end{array}\right)\right. \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \left.\F_2\{x\}\middle / \left(\begin{array}{c} F = 0, \\ V = 0 \end{array}\right)\right. \to 0.\]  The exact sequence is split as $\F_2$--modules, but not as Dieudonn\'e modules.
+\item \textit{If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  This follows from calculating the action of $F$ and $V$ to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as $\F_2$--modules, but not as Dieudonn\'e modules.
 \item \textit{The subgroups of $\alpha_2 \times \alpha_2$ of rank two are parameterized by $\mathbb{P}^1$.}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{x_1, x_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank $2$ subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a $1$--dimensional quotient module, and the ways to choose the kernel of this projection encompass a $\P^1$.
 \end{itemize}
 \end{example}
@@ -763,7 +770,13 @@ This construction also plays the role of a Dieudonn\'e functor:
 The functor $D_*$ determines a \emph{covariant} equivalence of categories between smooth $1$--dimensional formal groups over $k$ of finite $p$--height and Dieudonn\'e modules satisfying the three technical conditions of \Cref{MainContraDieudonneThm}. \qed
 \end{theorem}
 
-One of the main ingredients in the proof of \Cref{CurveDieudonneTheorem} is a representability result, which comes out of the following interesting construction.  The \textit{Witt scheme} $\W$ represents power series of the form $\prod_{j=1}^\infty (1 - a_j x^j)$, and it carries the structure of a group scheme by re-factoring the product of two such power series.  Using a rational exponential and logarithm, we also have \[\prod_{j=1}^\infty (1 - a_j x^j) = \exp \log \prod_{j=1}^\infty (1 - a_j x^j) = \exp \sum_{j=1}^\infty \left(-\sum_{k=1}^\infty \frac{1}{k} (a_j x^j)^k\right) = \exp \sum_{n=1}^\infty \frac{-t^n}{n} \sum_{m \mid n} m a_m^{n/m}.\]  These polynomials $w_n$, called \textit{ghost polynomials}, describe an injective logarithmic map \[(w_1, w_2, \ldots) \co \W \to \Ga^\infty,\] the image of which is characterized by the property $w_n(a) \equiv w_{n/p}(a)^p \pmod{p^j}$ for $p^j$ the maximum power of $p$ dividing $n$.  Over a $\Z_{(p)}$--algebra, there is a natural map on ghost components \[t(w_*(a_*))_{n'p^j} = (w_*(a_{p^j})),\] witnessing a decomposition $\W \times \Spec_{(p)} \cong \prod_{p \nmid n} \W_p$.  Both of these objects are natural limits of their truncations to finitely many power series product terms, and hence they both admit natural \emph{formal} objects, $\widehat{\W}$ and $\widehat{\W}_p$, by taking colimits of the formal completions of these truncations.
+One of the main ingredients in the proof of \Cref{CurveDieudonneTheorem} is a representability result, which comes out of the following interesting construction.  The \textit{Witt scheme} $\W$ represents power series of the form $\prod_{j=1}^\infty (1 - a_j x^j)$, and it carries the structure of a group scheme by re-factoring the product of two such power series.  Using a rational exponential and logarithm, we also have
+\begin{align*}
+\prod_{j=1}^\infty (1 - a_j x^j) & = \exp \log \prod_{j=1}^\infty (1 - a_j x^j) \\
+& = \exp \sum_{j=1}^\infty \left(-\sum_{k=1}^\infty \frac{1}{k} (a_j x^j)^k\right) \\
+& = \exp \sum_{n=1}^\infty \frac{-t^n}{n} \sum_{m \mid n} m a_m^{n/m} =: \exp \sum_{n=1}^\infty \frac{-t^n}{n} w_n(a).
+\end{align*}
+These polynomials $w_n$, called \textit{ghost polynomials}, describe an injective logarithmic map \[(w_1, w_2, \ldots) \co \W \to \Ga^\infty,\] the image of which is characterized by the property $w_n(a) \equiv w_{n/p}(a)^p \pmod{p^j}$ for $p^j$ the maximum power of $p$ dividing $n$.  Over a $\Z_{(p)}$--algebra, there is a natural map on ghost components \[t(w_*(a_*))_{n'p^j} = (w_*(a_{p^j})),\] witnessing a decomposition $\W \times \Spec_{(p)} \cong \prod_{p \nmid n} \W_p$.  Both of these objects are natural limits of their truncations to finitely many power series product terms, and hence they both admit natural \emph{formal} objects, $\widehat{\W}$ and $\widehat{\W}_p$, by taking colimits of the formal completions of these truncations.
 
 \begin{lemma}[{\cite[Chapter 3]{ZinkCartierTheory}}]
 There are natural correspondences
