--- a/sigma.tex
+++ b/sigma.tex
@@ -198,8 +198,8 @@ The Thom isomorphism $T\xi \sm T\xi \simeq T\xi \sm \Susp^\infty_+ G$ composes w
 is the subscheme of those maps sending the identity point of $\CP^\infty_E$ to the identity point of $\Gm$.  Such functions can be identified with trivializations of the trivial sheaf over $\CP^\infty_E$, and the action map induced by the Thom diagonal belongs to a commuting square
 \begin{center}
 \begin{tikzcd}
-\Spec E_0 MU \times \Spec E_0 BU \arrow{r} \arrow[equal]{d} & \Spec E_0 MU \arrow[equal]{d} \\
-\{\text{triv\textsuperscript{ns} of $\ThomSheaf{1 - \L} \downarrow \CP^\infty_E$}\} \times \{\text{triv\textsuperscript{ns} of $1 \downarrow \CP^\infty_E$}\} \arrow{r} & \{\text{triv\textsuperscript{ns} of $\ThomSheaf{1 - \L} \otimes 1 \downarrow \CP^\infty_E$}\}.
+\begin{array}{c}\Spec E_0 MU \\ \times \\ \Spec E_0 BU\end{array} \arrow{r} \arrow[equal]{d} & \Spec E_0 MU \arrow[equal]{d} \\
+\begin{array}{c} \{\text{triv\textsuperscript{ns} of $\ThomSheaf{1 - \L} \downarrow \CP^\infty_E$}\} \\ \times \\ \{\text{triv\textsuperscript{ns} of $1 \downarrow \CP^\infty_E$}\} \end{array} \arrow{r} & \{\text{triv\textsuperscript{ns} of $\ThomSheaf{1 - \L} \otimes 1 \downarrow \CP^\infty_E$}\}.
 \end{tikzcd}
 \end{center}
 
@@ -268,7 +268,7 @@ This ``$kU^0$--linearity'' is sometimes called a ``$2$--cocycle condition'', in 
 We would like to show that these observations suffice, as in the following version of \Cref{BUZTriumvirate} and \Cref{BUTriumvirate}:
 \begin{theorem}\label{BSUTriumvirate}
 \citeme{AHS}
-The functor \[\{\Spec T \xrightarrow{u} \Spec E_0\} \to \left\{ \begin{array}{c} \text{trivializations of $u^* \ThomSheaf{(1 - \L_1)(1 - \L_2)}$ over $u^* (\CP^\infty)^{\times 2}_E$} \\ \text{which are symmetric, rigid, and $kU^0$--linear} \end{array} \right\}\] is isomorphic to the affine scheme $\Spec E_0 MSU$.  Moreover, the $E_0$--points of this scheme biject with ring spectrum maps $MSU \to E$.
+The functor \[\{\Spec T \xrightarrow{u} \Spec E_0\} \to \left\{ \begin{array}{c} \text{trivializations of $u^* \ThomSheaf{(1 - \L_1)(1 - \L_2)}$} \\ \text{over $u^* (\CP^\infty)^{\times 2}_E$ which are} \\ \text{symmetric, rigid, and $kU^0$--linear} \end{array} \right\}\] is isomorphic to the affine scheme $\Spec E_0 MSU$.  Moreover, the $E_0$--points of this scheme biject with ring spectrum maps $MSU \to E$.
 \end{theorem}
 
 \noindent In pursuit of this, we will show rather manually that $BSU_E$ represents an object subject to exactly such symmetries, hence $\Spec E_0 BSU$ represents the scheme of such symmetric functions, and finally conclude that $\Spec E_0 MSU$ represents the scheme of such symmetric trivializations.  The place to begin is with a Serre spectral sequence:
@@ -356,20 +356,21 @@ C^2(\G_E; \L)(T) & = \left\{\begin{array}{c}\text{triv\textsuperscript{ns} of $u
 \end{align*}
 \end{definition}
 
-\noindent Thus far, we have established the following isomorphisms:
+Thus far, we have established the following families of isomorphisms:
 \begin{align*}
-(\Z \times BU)_E & \cong C_0 \CP^\infty_E, &
-\Spec E_0(\Z \times BU) & \cong C^0(\CP^\infty_E; \Gm), &
-\Spec E_0(MUP) & \cong C^0(\CP^\infty_E; \sheaf I(0)), \\
-BU_E & \cong C_1 \CP^\infty_E, &
-\Spec E_0(BU) & \cong C^1(\CP^\infty_E; \Gm), &
-\Spec E_0(MU) & \cong C^1(\CP^\infty_E; \sheaf I(0)), \\
-BSU_E & \cong C_2 \CP^\infty_E, &
-\Spec E_0(BSU) & \cong C^2(\CP^\infty_E; \Gm),
+\text{(Cohomological formal schemes:)} & &
+    (\Z \times BU)_E & \cong C_0 \CP^\infty_E, \\
+& & BU_E & \cong C_1 \CP^\infty_E, \\
+& & BSU_E & \cong C_2 \CP^\infty_E, \\
+\text{(Homological schemes:)} & &
+    \Spec E_0(\Z \times BU) & \cong C^0(\CP^\infty_E; \Gm), \\
+& & \Spec E_0(BU) & \cong C^1(\CP^\infty_E; \Gm), \\
+& & \Spec E_0(BSU) & \cong C^2(\CP^\infty_E; \Gm), \\
+\text{(Orientation schemes:)} & &
+    \Spec E_0(MUP) & \cong C^0(\CP^\infty_E; \sheaf I(0)), \\
+& & \Spec E_0(MU) & \cong C^1(\CP^\infty_E; \sheaf I(0)),
 \end{align*}
-where we have abusively abbreviated the sheaf of functions on $\CP^\infty_E$ to $\Gm$.
-
-In order to fill in the missing piece, we exploit the torsor structure on Thom spectra discussed earlier.
+where we have abusively abbreviated the sheaf of functions on $\CP^\infty_E$ to $\Gm$.  In order to fill in the missing piece, we exploit the torsor structure on Thom spectra discussed earlier.
 \begin{lemma}[{\cite[Theorem 2.50]{AHSTheoremOfTheCube}}]
 There is a system of compatible maps
 \begin{center}
@@ -761,7 +762,13 @@ The \textit{Artin--Hasse exponential} is the power series \[E_p(t) = \exp\left( 
 Write $\delta_{(\G_a, \Gm)}\co C^1(\G_a; \Gm) \to C^2(\G_a; \Gm)$ and \[d_n = \begin{cases} 1 & \text{if $n = p^j$}, \\ 0 & \text{otherwise}. \end{cases}\]  The class $g_n(x, y) = \delta_{(\G_a,\Gm)} E_p(a_n x^n)^{1/p^{d_n}}$ is a series in $\F_p[a_n]\ps{x,y}$ and presents a point in $C^2(\G_a; \Gm)$ reducing to $a_n c_n \in C^2(\G_a; \G_a)$ on tangent spaces.
 \end{lemma}
 \begin{proof}
-Recall from \Cref{ArtinHasseExponential} that $E_p$ has coefficients in $\Z_{(p)}$, and hence it can be reduced to a series with coefficients in $\F_p$.   We then make the calculation \[g_n(x, y) = \delta_{(\G_a, \Gm)} E_p(a_n x^n)^{1/p^{d_n}} = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} \delta_{(\G_a, \G_a)} x^{np^j}}{p^{j + d_n}} \right) = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} c_{np^j}(x, y)}{p^j} \right).\]  As claimed, the leading term is exactly $a_n c_n$, this series is symmetric, and since it is in the image of $\delta_{(\G_a, \Gm)}$ it is certainly a $2$--cocycle.
+Recall from \Cref{ArtinHasseExponential} that $E_p$ has coefficients in $\Z_{(p)}$, and hence it can be reduced to a series with coefficients in $\F_p$.   We then make the calculation
+\begin{align*}
+g_n(x, y) & = \delta_{(\G_a, \Gm)} E_p(a_n x^n)^{1/p^{d_n}} \\
+& = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} \delta_{(\G_a, \G_a)} x^{np^j}}{p^{j + d_n}} \right) \\
+& = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} c_{np^j}(x, y)}{p^j} \right).
+\end{align*}
+As claimed, the leading term is exactly $a_n c_n$, this series is symmetric, and since it is in the image of $\delta_{(\G_a, \Gm)}$ it is certainly a $2$--cocycle.
 \end{proof}
 
 Letting $n$ range, this culminates in the following calculation:
@@ -1201,7 +1208,7 @@ Now let $A \subseteq \Z\ps{q}$ be the subring of power series which converge abs
 The singular fiber at $q = 0$ prompts us to enlarge our notion of elliptic curve slightly.
 
 \begin{definition}[{\cite[Definitions B.1-2]{AHSTheoremOfTheCube}}]
-A \textit{Weierstrass curve} is \emph{any} curve of the form \[C(a_1, a_2, a_3, a_4, a_6) := \left\{ ([x : y : w], s) \in \mathbb P^2 \times S \middle| \begin{array}{c} y^2 w + a_1(s) xyw + a_3(s) yw^2 = \\ x^3 + a_2(s) x^2 w + a_4(s) x w^2 + a_6(s) w^3 \end{array} \right\}.\]  A \textit{generalized elliptic curve} over $S$ is a scheme $C$ equipped with maps \[S \xrightarrow{0} C \xrightarrow{\pi} S\] such that $C$ is Zariski--locally isomorphic to a system of Weierstrass curves (in a way preserving $0$ and $\pi$).\footnote{An elliptic curve in the usual sense turns out to be a generalized elliptic curve which is smooth, i.e., the discriminant of the Weierstrass equations is a unit.}\footnote{Unfortunately, ``generalized elliptic curve'' already means something in number theory, but Ando, Hopkins, and Strickland reused this phrase for this definition in their published article.  In a number theorist's language, these are ``stable curves of genus $1$ with specified section in the smooth locus''.  No adjective other than ``generalized'' seems to be much better: singular, for instance, evokes the right idea but is also already taken.}
+A \textit{Weierstrass curve} is \emph{any} curve of the form \[C(a_1, a_2, a_3, a_4, a_6) := \left\{ [x : y : w] \in \mathbb P^2 \middle| \begin{array}{c} y^2 w + a_1 xyw + a_3 yw^2 = \\ x^3 + a_2 x^2 w + a_4 x w^2 + a_6 w^3 \end{array} \right\}.\]  A \textit{generalized elliptic curve} over $S$ is a scheme $C$ equipped with maps \[S \xrightarrow{0} C \xrightarrow{\pi} S\] such that $C$ is Zariski--locally isomorphic to a system of Weierstrass curves (in a way preserving $0$ and $\pi$).\footnote{An elliptic curve in the usual sense turns out to be a generalized elliptic curve which is smooth, i.e., the discriminant of the Weierstrass equations is a unit.}\footnote{Unfortunately, ``generalized elliptic curve'' already means something in number theory, but Ando, Hopkins, and Strickland reused this phrase for this definition in their published article.  In a number theorist's language, these are ``stable curves of genus $1$ with specified section in the smooth locus''.  No adjective other than ``generalized'' seems to be much better: singular, for instance, evokes the right idea but is also already taken.}
 \end{definition}
 
 \begin{remark}[{\cite[pg.\ 670]{AHSTheoremOfTheCube}}]\label{TwistedCubicGivesGm}
