--- a/unknowns.tex
+++ b/unknowns.tex
@@ -861,14 +861,14 @@ We want now to understand $E_\infty(M\Spin, KO_p)$ and its map to $E_\infty(M\Sp
 We are looking to understand the space of filler diagrams $A$ (i.e., vertical maps with choice of homotopy of the precomposite to $\gl_1 \eta_{KO_p}$).  Notice first that there is a natural cofiber sequence to be placed on the bottom row:
 \todo{I don't like the placing of this $A$. I want it to indicate a choice of filler.}
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1em]
 \spin \arrow{r}[description]{j} \arrow[red]{rd} & \gl_1 \S \arrow{r} \arrow[red]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & Cj \arrow[densely dotted, "A"']{d} \\
 & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \end{center}
 There is a canonical red vertical lift of $\gl_1 \eta_{KO_p}$ since $\gl_1 \S$ is a torsion spectrum, and this precomposes with $j$ to give another vertical map.  Notice now that selecting a filler triangle $A$ gives a commuting square with choice of homotopy and that $[\gl_1 \S, \Q \otimes \gl_1 KO_p] = 0$, and hence we would get a natural map (and natural homotopy) off of the homotopy cofibers:
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1em]
 \spin \arrow{r}[description]{j} \arrow{rd} & \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & Cj \arrow[densely dotted, "A"' near start]{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[densely dotted]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
 & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p,
 \end{tikzcd}
@@ -877,7 +877,7 @@ where $C$ is a map making the triangle it belongs to commute.  This all gives a 
 
 In order to show nonconstructively that the set of $A$s is nonempty, we might try to discern that $\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p]$ is zero by demonstrating something about the mapping set $[\spin, \gl_1 KO_p]$ itself.  We proceed by a sequence of quite improbable steps, beginning with the following Theorem original to Ando--Hopkins--Rezk:
 \begin{theorem}[{\cite[Theorem 4.11]{AHR}}]
-Let $R$ be an $E_\infty$ ring spectrum satisfying $R = L_d R$, and set $F$ to be the fiber \[F \to \gl_1 R \to L_n \gl_1 R.\]  Then $\pi_* F$ is torsion and $F$ satisfies the coconnectivity condition $F \simeq F(-\infty, d]$. \qed
+Let $R$ be a $E(d)$--local $E_\infty$ ring spectrum, and set $F$ to be the fiber \[F \to \gl_1 R \to L_d \gl_1 R.\]  Then $\pi_* F$ is torsion and $F$ satisfies the coconnectivity condition $F \simeq F(-\infty, d]$. \qed
 \end{theorem}
 
 \noindent It follows that $\gl_1 KO_p \to L_1 \gl_1 KO_p$ is a $1$--connected map, and hence \[[\spin, \gl_1 KO_p] = [\spin, L_1 \gl_1 KO_p].\]  In fact, we can even pass to the $K(1)$--localization, if we digress for a moment to introduce Rezk's logarithmic cohomology operation.
@@ -947,7 +947,7 @@ The effect of this sequence of steps is \[t_{4k} = (1 - c^k)^{-1} b_{4k} (1 - p^
 
 \begin{sidewaysfigure}
 \centering
-\begin{tikzcd}[column sep=0.7em]
+\begin{tikzcd}[column sep=0em]
 & & & \widehat L_1 \S \arrow{rr} \arrow[equal]{d} & & KO_p \arrow[equal]{d} \arrow["1 - \psi^c"]{rr} & & KO_p \arrow[equal]{d} \\
 & & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[densely dotted, "B'" near start]{dd} \arrow{rr} & & \widehat L_1 b\spin \\
 \spin \arrow{rr}[description]{j} \arrow{rrdd} & & \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & Cj \arrow{ru} \arrow[densely dotted, "A"' near start]{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
