--- a/main.bib
+++ b/main.bib
@@ -406,6 +406,22 @@ MRREVIEWER = {Willi Meier},
        URL = {http://dx.doi.org/10.1016/0040-9383(79)90018-1},
 }
 
+@article {BousfieldUnstableLocalization,
+    AUTHOR = {Bousfield, A. K.},
+     TITLE = {The localization of spaces with respect to homology},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {14},
+      YEAR = {1975},
+     PAGES = {133--150},
+      ISSN = {0040-9383},
+   MRCLASS = {55D05},
+  MRNUMBER = {0380779},
+MRREVIEWER = {M. Mimura},
+       DOI = {10.1016/0040-9383(75)90023-3},
+       URL = {http://dx.doi.org/10.1016/0040-9383(75)90023-3},
+}
+
 @book {Breen,
     AUTHOR = {Breen, Lawrence},
      TITLE = {Fonctions th\^eta et th\'eor\`eme du cube},
@@ -1232,6 +1248,23 @@ MRREVIEWER = {J. Dieudonn{\'e}},
   MRNUMBER = {544245},
 MRREVIEWER = {Edgar H. Brown, Jr.},
        URL = {http://projecteuclid.org/euclid.dmj/1077313574},
+}
+
+@article {MahowaldThompson,
+    AUTHOR = {Mahowald, Mark and Thompson, Robert D.},
+     TITLE = {The {$K$}-theory localization of an unstable sphere},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {31},
+      YEAR = {1992},
+    NUMBER = {1},
+     PAGES = {133--141},
+      ISSN = {0040-9383},
+   MRCLASS = {55P60 (55N15)},
+  MRNUMBER = {1153241},
+MRREVIEWER = {Donald M. Davis},
+       DOI = {10.1016/0040-9383(92)90066-Q},
+       URL = {http://dx.doi.org/10.1016/0040-9383(92)90066-Q},
 }
 
 @book {Margolis,
