--- a/preamble.tex
+++ b/preamble.tex
@@ -189,6 +189,7 @@
 \newcommand{\Res}{\mathrm{Res}}
 \newcommand{\Tr}{\mathrm{Tr}}
 \newcommand{\Cart}{\mathrm{Cart}}
+\newcommand{\tr}{\mathrm{tr}}
 \newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
 
 \DeclareMathOperator{\im}{im}
