oops, committed a bad main.tex

--- a/main.tex
+++ b/main.tex
@@ -65,31 +65,31 @@
 
 \mainmatter
 
-% \include{intro}
+\include{intro}
 
-% \include{conventions}
+\include{conventions}
 
 
-% \renewcommand\chaptername{Case Study}
-% \renewcommand\cftchappresnum{{Case Study}\space}
-% \setlength{\cftchapnumwidth}{\widthof{\textbf{Case study~999~}}}
+\renewcommand\chaptername{Case Study}
+\renewcommand\cftchappresnum{{Case Study}\space}
+\setlength{\cftchapnumwidth}{\widthof{\textbf{Case study~999~}}}
 
-% \include{mo}
+\include{mo}
 
-% \include{quillen}
+\include{quillen}
 
-% \include{finite}
+\include{finite}
 
-% \include{cooperations}
+\include{cooperations}
 
-% \include{sigma}
+\include{sigma}
 
 
 \appendix
 
 \include{powerops}
 
-% \include{unknowns}
+\include{unknowns}
 
 
 
