fixes compiling the book with drawing.pdf, at least on my machine

--- a/finite.tex
+++ b/finite.tex
@@ -870,11 +870,11 @@ We also see that our analysis fails wildly for the case $\Gamma = \G_a$.  The di
 \end{remark}
 
 Having accomplished all our major goals, we close our algebraic analysis of $\moduli{fg}$ with \Cref{MfgPicture}, a diagram summarizing our results.
-\todo{Complete picture}
+\todo[color=red]{Complete picture}
 
 \begin{sidewaysfigure}
 \centering
-\input{"other resources/drawing.pdf_tex"}
+\input{drawing.pdf_tex}
 
 %\vspace{\baselineskip}
 %Draw a picture of $\Spec \Z_{(p)}$ for the base object: a generic point $(0)$ and a point $(p)$ with a $1$--dimensional arithmetic neighborhood.
